--- a/motion.html
+++ b/motion.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='style.css' />
     <title>p5.js example</title>
-    <script src="../p5.js"></script>
-    <script src="../addons/p5.sound.min.js"></script>
+    <script src="lib/p5.js"></script>
+    <script src="lib/addons/p5.sound.min.js"></script>
     <script src="sketch2.js"></script>
     </head>
 
